# ledger-core

./: API Documentation Append Event  API Documentation Verify Integrity  API DocumentationGet Audit Trail  Cargo.toml  Directory  Docker  Founder Loan Program.ts  LICENSE  Ledger-compatible-event.emit  README.md  Set up environment variables  Update Cargo.toml  Varify-foundation.sh  founder-loan-program.git
Tests/: founder-loan+integration.ts
config/: compliance_rules.yaml
scripts/: deploy.sh
src/: main.rs
src/api/: routes.rs
src/storage/: append_only.rs
