[package]
name = "gitdigital-ledger-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Financial + compliance ledger. Append-only. Events in, truth out."
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "decimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = "1.0"
config = "0.13"
validator = { version = "0.16", features = ["derive"] }
ring = "0.17"

[dev-dependencies]
tempfile = "3.3"
pretty_assertions = "1.0"
